--- a/Changes
+++ b/Changes
@@ -534,6 +534,10 @@ OCaml 4.11
 - #9695, #9702: no error when opening an alias to a missing module
   (Jacques Garrigue, report and review by Gabriel Scherer)
 
+- #9714, #9724: Add a terminator to the`caml_domain_state` structure
+  to better ensure that members are correctly spaced.
+  (Antonin Décimo, review by David Allsopp and Xavier Leroy)
+
 OCaml 4.10 maintenance branch
 -----------------------------
 
@@ -563,10 +567,8 @@ OCaml 4.10 maintenance branch
   output channels would not be flushed).
   (Nicolás Ojeda Bär, review by David Allsopp)
 
-- #9714, #9724: Use the C++ alignas keyword when compiling in C++.
-  Fixes a bug with MSVC C++ 2015/2017. Add a terminator to the
-  `caml_domain_state` structure to better ensure that members are
-  correctly spaced.
+- #9714, #9724: Use the C++ alignas keyword when compiling in C++ in MSVC.
+  Fixes a bug with MSVC C++ 2015 onwards.
   (Antonin Décimo, review by David Allsopp and Xavier Leroy)
 
 - #9736, #9749: Compaction must start in a heap where all free blocks are
