--- a/Changes
+++ b/Changes
@@ -78,6 +78,11 @@ Working version
   (Xavier Leroy, reports by Tomasz Kłoczko and R.W.M. Jones, review by Anil
    Madhavapeddy, Stephen Dolan, and Florian Angeletti)
 
+- #10304: Fix a crash in the instrumented runtime in pooled mode, and
+   fix some leaks in the normal runtime in pooled mode or when calling
+   caml_startup* several times.
+  (Guillaume Munch-Maccagnoni, review by )
+
 ### Code generation and optimizations:
 
 - #9876: do not cache the young_limit GC variable in a processor register.
